// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Componente de transação do extrato Componente transações O snapshot do componente deve sempre renderizar 1`] = `
<div
  data-testid="transacoes"
>
  <div
    class="transacao-container"
  >
    <p>
      08/09/2020
    </p>
    <p>
      saque
    </p>
    <p>
      R$ 
      15.00
    </p>
  </div>
  <div
    class="transacao-container"
  >
    <p>
      09/09/2021
    </p>
    <p>
      desposito
    </p>
    <p>
      R$ 
      20.00
    </p>
  </div>
</div>
`;

exports[`Componente de transação do extrato O Snapshot do componente deve permanecer sempre o mesmo 1`] = `
<div
  class="transacao-container"
>
  <p>
    08/09/2020
  </p>
  <p>
    saque
  </p>
  <p>
    R$ 
    20.00
  </p>
</div>
`;
